--- a/frontend_ranmil44/package.json
+++ b/frontend_ranmil44/package.json
@@ -25,6 +25,7 @@
     "@ngrx/store": "^18.1.1",
     "@ngrx/store-devtools": "^18.1.1",
     "@zxing/browser": "^0.1.5",
+    "chart.js": "^4.5.0",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
@@ -44,6 +45,7 @@
     "@angular-devkit/build-angular": "^18.2.19",
     "@angular/cli": "^18.2.19",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.19",
